# notebooks

./: pyproject.toml
notebooks/: anscombe_quartet.ipynb  get_vs_head.ipynb
